Finally fixed on firefox

--- a/css/win98.css
+++ b/css/win98.css
@@ -118,24 +118,17 @@
 	
 	#itemsheader{height:21px;} /* Should match MS-UP Height */
 	
-	#MS-UP{content:url("../images/mainstretch-up.png"); height:21px;}
-	#MS-LEFT{content:url("../images/mainstretch-left.png"); width:3px;}
-	#MS-RIGHT{content:url("../images/mainstretch-right.png"); width:3px;}
-	#MS-DOWN{content:url("../images/mainstretch-down.png"); height:3px;}
+	#MS-UP		{height:21px;}
+	#MS-LEFT	{width:3px;}
+	#MS-RIGHT	{width:3px;}
+	#MS-DOWN	{height:3px;}
 	
-	#MC-UPLEFT{content:url("../images/maincorner-upleft.png");}
-	#MC-UPRIGHT{content:url("../images/maincorner-upright.png");}
-	#MC-DOWNLEFT{content:url("../images/maincorner-downleft.png");}
-	#MC-DOWNRIGHT{content:url("../images/maincorner-downright.png");}
-	
+
 	#taskbar{background-image: url("../images/taskbar-stretch.png");}
 	
-	#taskbarButton_inactive{content:url("../images/taskbar-left.png"); position: absolute; left: 0px;}
-	#taskbarButton_active{content:url("../images/taskbar-left-pressed.png"); position: absolute; left: 0px;}
-	
-	#taskbarDetail{content:url("../images/taskbar-detail.png");}
-	#taskbarRight{content:url("../images/taskbar-right.png");}	
-	
+	#taskbarButton_inactive{position: absolute; left: 0px;}
+	#taskbarButton_active{	position: absolute; left: 0px;}
+
 	#taskbar{height: 100%; width: 100%; position: absolute; left: 0; bottom: 0; top: calc(100% - 30px)}
 	#clock{color: black; position:absolute; top:-3; right:8 ; text-align: center}
 	#splash{position:absolute; top:-12px; left:8px; font-weight: normal; font-size: 16px;}
